New Home page design added.

--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
 		<title>Projection by TEMPLATED</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css"
+		<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet"/>
 	</head>
 	<body>
 
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="logo"><strong>Projection</strong> by TEMPLATED</a>
+					<a href="index.html" class="logo"><img src="images/WeDigTech_logo.svg" ></a>
 					<nav id="nav">
-						<a href="index.html">Home</a>
-						<a href="generic.html">Generic</a>
-						<a href="elements.html">Elements</a>
+						<a href="index.html" class="active">Home</a>
+						<a href="generic.html">Services</a>
+						<a href="elements.html">Leave a Review</a>
+						<a href="elements.html">Sign-in</a>
+						<a href="elements.html">Sign-up</a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 				</div>
