--- a/edit-profile.html
+++ b/edit-profile.html
@@ -190,7 +190,7 @@
          </div>
       </div>
       
-      <div class="form-container>
+      <div class="form-container">
       <h3>Edit Profile</h3>
 
         <form method="post" action="#">
