--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                         </ul>
                      </nav>
                </div>
-               <a href="#team" class="nav-link w-nav-link">Leave a Review</a><a href="#contact" class="nav-link w-nav-link">Login/Signup</a>
+               <a href="reviewstep1.html" class="nav-link w-nav-link">Leave a Review</a><a href="#contact" class="nav-link w-nav-link">Login/Signup</a>
             </nav>
             <div class="menu-button w-nav-button">
                <div class="w-icon-nav-menu"></div>
