--- a/reviewstep4.html
+++ b/reviewstep4.html
@@ -191,6 +191,13 @@
       </div>
       
       <div class="form-container">
+          <!-- progressbar -->
+            <ul id="progressbar">
+                    <li class="active">Step 1</li>
+                    <li class="active">Step 2</li>
+                    <li class="active">Step 3</li>
+                    <li class="active">Step 4</li>
+                </ul>
       <h3>Verification</h3>
       <p>This last step is to verify the reviewer by using their contact information</p>
 
